fix ugly button style on Safari.

--- a/style.css
+++ b/style.css
@@ -96,17 +96,23 @@ input.user {
 	line-height: 36px;
 	color: white;
 	text-align: center;
+    display: inline-block;
 }
 
-input.button {
-	background-color: rgba(46, 48, 146, 0.8);
-	border-radius: 8px;
-	border-style: none;
-	line-height: 36px;
-	height: 36px;
+.button {
+    background-color: rgba(46, 48, 146, 0.8);
+    border-radius: 8px;
+    border-style: none;
+    line-height: 38px;
+    height: 38px;
+    width: 70px;
 	color: white;
 	text-align: center;
 	text-shadow: 0px 0px 5px white;
+    -moz-user-select:none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -o-user-select: none;
 }
 
 .footer{
